--- a/package.json
+++ b/package.json
@@ -10,18 +10,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/messaging": "^22.2.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.10.0",
     "expo": "~53.0.12",
+    "expo-dev-client": "~5.2.2",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
     "metro": "^0.82.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.0",
+    "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "styled-components": "^6.1.18"
   },
