fix status timetable

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,7 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
-EduConnect_Mobile/edunotification-d5eb2-firebase-adminsdk-fbsvc-1d468d18a3.json
+
+# Firebase configuration files
+edunotification-d5eb2-firebase-adminsdk-fbsvc-1d468d18a3.json
+google-services.json
